# whitespace

./: LICENSE  README.md  Whitespace.cabal
app/: Main.hs  Solution.hs
