cabal-version:      3.0
name:               Whitespace
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             amisto
maintainer:         amisto@qq.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable Whitespace
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0, lens, mtl, array, containers, parsec
    hs-source-dirs:   app
    default-language: Haskell2010
